--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -36,7 +36,9 @@
             );
             text-align: center;
             border-radius: 30px;
+            padding: 30px;
           }
+          
          .barry {
            width: 380px;
            height: 480px;
